GNOME Bugzilla – Bug 143975
Preferred Applications doesn't call balsa properly
Last modified: 2004-12-22 21:47:04 UTC
Balsa should be invoked with "balsa -m %s" instead of "balsa --compose=%s" Please refer to http://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=111402
trivial patch applied to both trees