Clear out some old patches

2004-06-08  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=143975
	* gnome-default-applications-properties-structs.c : quick fix